.env: adding new env variables

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-export BITCOIN_PROJ_PATH=~/desktop/projects/bitcoin
+BITCOIN_PROJ_PATH=~/desktop/projects/bitcoin
+BITCOIN_CLI=$BITCOIN_PROJ_PATH/src/bitcoin-cli
+BITCOIN_D=$BITCOIN_PROJ_PATH/src/bitcoind
