--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BITCOIN_PROJ_PATH=~/desktop/projects/bitcoin
+BITCOIN_PROJ_PATH=/home/ccdle12/Desktop/projects/personal/bitcoin
 BITCOIN_CLI=$BITCOIN_PROJ_PATH/src/bitcoin-cli
 BITCOIN_D=$BITCOIN_PROJ_PATH/src/bitcoind
